# token-group

./: Cargo.toml  README.md
clients/js-legacy/: README.md  package.json  tsconfig.cjs.json  tsconfig.esm.json
clients/js-legacy/src/: instruction.ts
clients/js-legacy/src/state/: tokenGroup.ts  tokenGroupMember.ts
clients/js-legacy/test/: instruction.test.ts  state.test.ts
interface/: Cargo.toml  README.md
interface/src/: error.rs  instruction.rs  lib.rs  state.rs
program/: Cargo.toml
program/src/: entrypoint.rs  lib.rs  processor.rs
program/tests/: initialize_group.rs  initialize_member.rs  setup.rs  update_group_authority.rs  update_group_max_size.rs
