[package]
name = "tpl-token-group-interface"
version = "0.7.1"
description = "Trezoa Program Library Token Group Interface"
documentation = "https://docs.rs/tpl-token-group-interface"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = "1.23.2"
num-derive = "0.4"
num_enum = "0.7"
num-traits = "0.2"
trezoa-instruction = "3.0.0"
trezoa-program-error = "3.0.0"
trezoa-pubkey = "3.0.0"
tpl-discriminator = "0.5.1"
tpl-pod = "0.7.0"
thiserror = "2.0"

[dev-dependencies]
trezoa-sha256-hasher = "3.0.0"
tpl-type-length-value = { version = "0.9.0", features = ["derive"] }

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
